fix: add dark mode styling

--- a/css/style.css
+++ b/css/style.css
@@ -1186,6 +1186,12 @@ video {
     outline-color: #0f172a;
   }
 
+  .dark\:ring-0 {
+    --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+    --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+    box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+  }
+
   .dark\:placeholder\:text-gray-500::-moz-placeholder {
     --tw-text-opacity: 1;
     color: rgb(107 114 128 / var(--tw-text-opacity));
